--- a/scStore/src/index.html
+++ b/scStore/src/index.html
@@ -8,14 +8,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1">
   <!-- site metas -->
-  <title>cla</title>
+  <title>etm</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
   <meta name="author" content="">
   <!-- bootstrap css -->
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <!-- style css -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+
   <!-- Responsive-->
   <link rel="stylesheet" href="./assets/css/responsive.css">
   <!-- fevicon -->
